src/client/css/doctors.css
:root {
  --doc-info-container: #d5d5d5;
  --sortby-gray: #d3d3d3;
  --doc-name-blue: #049bff;
  --text-gray:#808080;
}

.doctor-tab-header {
  display: none;
}

.doctors-list {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  padding-top: 0;
  padding-bottom: 0;
}
.doctors-list__title {
  font-size: 1.25rem;
  font-family: "Nexa-Light";
  font-weight: bold;
}

.sort {
  padding: 0.4rem 0.6rem;
  display: flex;
  justify-content: center;
  background: var(--sortby-gray);
}

.doctors-list__sort {
  background: var(--doc-info-container);
  appearance: none;
  font-size: 0.8rem;
  border: 0px;
  outline: 0px;
  color: black;
  font-weight: 800;
}

.fa-chevron-down {
  color: black;
  font-size: 0.6rem;
}
.sortby-arrow {
  display: inline-block;
}

.doctor-details {
  border: 1.75px solid var(--sortby-gray);
  margin-bottom: 1rem;
}

.horizontal-line {
  display: block;
  height: 2px;
  width: 2.5rem;
  margin-right: 0.5rem;
}

.name-container {
  display: flex;
  padding: 1rem 0;
}

.horizontal-line {
  color: var(--doc-name-blue);
}

.doc-name {
  color: var(--doc-name-blue);
}

.doc-info i {
  color: var(--doc-name-blue);
  padding: 0.5rem 1rem;
}

.doc-info span {
  color:var(--text-gray);
  font-size: 1rem;
  font-family: "Nexa-Light";
  font-weight: 800;
}

.doc-figure {
  height: 22rem;
  width: 100%;
}
.doc-image {
  object-fit: cover;
  vertical-align: bottom;
  object-position: top;
}

.filterby {
  display: none;
}

.aside-container-filter {
  background: var(--sortby-gray);
  padding: 1rem;
}

.categories {
  display: flex;
  flex-direction: column;
}

.categories-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2rem 0 1rem 1rem;
}

.search-line {
  width: 1.25rem;
  height: 0.3rem;
  border-radius: 0;
  background: var(--sortby-gray);
  margin-left: 0.25rem;
}
.search-icon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.search-icon i{
  color:var(--doc-name-blue); 
}

.checkbox-options {
  display: flex;
  flex-direction: column;
  margin-left: 1rem;
}

.checkbox-option {
  color:var(--text-gray);
  display: flex;
  align-items: center;
  font-size: 0.9rem;
  line-height: 01rem;
  margin-bottom: 0.25rem;
  font-weight: bold;
  font-family:"Nexa-Light";
}
.checkbox-info {
  margin-right: 1rem;
}

.show-more {
  display: flex;
  align-items: center;
  position: relative;
  margin: 1rem 1rem;
}

.show-more__icon {
  font-size: 0.5rem;
  position: absolute;
  top: 25%;
  color:var(--doc-name-blue);
}

.show-more__text {
  margin: 0 1rem;
  color:var(--doc-name-blue);
}

.category-end-line {
  width: 100%;
  color:var(--sortby-gray);
}



#social-media li,
#footer-services li {
  margin-bottom: 1.5rem;
}

#doc-footer {
  background: #010b1d;
}
.follow-us-text {
  color: #f2f3f3;
  margin: 2rem auto;
}

.footer-tab {
  display: none;
}

.follow-us {
  display: none;
}

.copyright {
  margin-top: 2rem;
}

.copyright-text,
.copyright-icon {
  font-size: 0.7rem;
  color: #3e444c;
}

@media (min-width: 48rem) {
  .doctor-tab-header {
    display: block;
    position: relative;
  }
  .header-img {
    height: 15rem;
    width: 100%;
    background: linear-gradient(
        rgba(158, 186, 205, 0.9),
        rgba(158, 186, 205, 0.9)
      ),
      url("../assets/images/doctors.png") center/cover;
  }

  .header-title {
    position: absolute;
    top: 45%;
    left: 2rem;
    font-size: 1.75rem;
  }

  .header-location-text {
    color: black;
    font-size: 1.5rem;
    text-decoration: underline;
    font-family: "Nexa-Light";
  }
  .doctors-list {
    padding: 0;
    align-items: center;
  }

  .doctors-list__title {
    font-size: 1.4rem;
  }
  .tab-container {
    display: grid;
    grid-template-columns: 1fr 3fr;
  }

  .filterby {
    display: block;
    grid-column-start: 1;
    grid-column-end: 2;
    margin: 2rem 0;
  }

  .doctors-section {
    grid-column-start: 2;
    grid-column-end: 3;
    padding-right: 0;
    padding-left:1rem;
  }

  .doctor-details {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 3fr;
    grid-gap: 0 0.75rem;
  }

  .name-container {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;
  }

  .info-container {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 1;
    grid-column-end: 2;
  }

  .doc-figure {
    grid-row-start: 1;
    grid-row-end: 3;
    grid-column-start: 2;
    grid-column-end: 3;
    height: 100%;
    width: 100%;
  }

  .info-container {
    margin-left: 1rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, auto);
    gap: 0.5rem;
  }
  .doc-info {
    display: flex;
    align-items: center;
  }
  .doc-info span {
    font-size: 0.9rem;
  }
  .info-1 {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;
  }

  .info-2 {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .info-3 {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 1;
    grid-column-end: 2;
  }
  .info-4 {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 2;
    grid-column-end: 3;
  }

  .info-5 {
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 1;
    grid-column-end: 2;
  }


  .filterby {
    display: flex;
    flex-direction: column;
  }

  .checkbox-info{
    margin-left:0;
  }

  .categories-title p{
    font-size:1rem;
  }

  #doc-footer {
    background: white;
  }
  .follow-us-text {
    display: none;
  }

  #social-media {
    display: none;
  }

  .follow-us {
    display: inline-block;
  }
}

@media (min-width: 64rem) {
  .header-location-text {
    font-size: 2rem;
    font-family:"Nexa-Bold";
  }

  .header-title {
    left: 6.25rem;
    font-family: "Nexa-Light";
  }

  .doctors-container {
    padding-bottom: 3rem;
  }

  .doctors-section {
    padding-left: 2rem;
    padding-bottom: 0;
  }

  .filterby {
    margin-top: 4rem;
  }

  .search-line{
    margin:0 1rem;
    height:0.2rem;
  }

  .checkbox-option{
    font-size:0.8rem;
  }

  .info-container {
    grid-template-columns: repeat(2, 0.5fr);
  }


.categories-title{
  margin: 0.8rem 0 0.8rem 0.8rem;
}

.doctors-list__sort{
  font-family:"Nexa-Bold";
}

.fa-chevron-down{
  font-family:"Nexa-Bold";
}

.show-more{
  margin:0.3rem;
}

.show-more__icon {
  font-size: 0.4rem;
}

.show-more__text {
  font-size: 0.8rem;;
}

  .doc-figure {
    justify-self: end;
    height: 15rem;
    width: 70%;
  }

  .copyright-footer{
    margin-top:0;
  }
}

